@startuml ERD
hide circle
skinparam classAttributeIconSize 0
skinparam Linetype ortho
skinparam class {
    BackgroundColor PaleGreen
    BorderColor DarkGreen
    ArrowColor DarkGreen
}
entity "User" {
    +id: int
    +username: string
    +email: string
    +password: string
    +role: string
    +status: string
}

entity "Volunteer" {
    +id: int (PK)
    +Organization_id: int (FK)
    +Volunteer_id: int (FK)
    +participationHistory: list
}

entity "Organization" {
    +id: int (PK)
    +porile_picture: string
    +cover_picture: string
    +location: string
    +phone : int
    +publishedOpportunities: list
}

entity "Admin" {
    +id: int (PK)
    +userManagement: list
}

entity "Opportunity" {
    +id: int (PK)
    +Organization_id: int (FK)
    +title: string
    +description: string
    +pictures: string
    +location: string
    +duration: string
}

entity "Candidature" {
    +id: int (PK)
    +Volunteer_id: int (FK)
    +Opportunity_id: int (FK)
    +motivation_letter: string
    +status: string
    +submissionDate: date
}

entity "Statistics" {
    +id: int (PK)
    +Organization_id: int (FK)
    +numberVolunteers: int
    +numberOpportunities: int
}

entity "Message" {
    +id: int (PK)
    +sender_id: int (FK)
    +receiver_id: int (FK)
    +content: string
}

entity "Donation" {
    +id: int (PK)
    +Volunteer_id: int (FK)
    +Organization_id: int (FK)
    +description: string
    +status: string
}

User --|> Volunteer : Inherits
User --|> Organization : Inherits
User --|> Admin : Inherits

User "1" --> "*" Message : Sends
Volunteer "1" --> "*" Donation : Posts
Volunteer "1" --> "*" Candidature : Applies
Organization "1" --> "*" Opportunity : Publishes
Organization "1" --> "1" Statistics : Has
Organization "1" --> "*" Donation : Manages
Candidature "*" --> "1" Opportunity : Refers to
@enduml
